--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -176,6 +176,7 @@ main {
         button {
           margin: 5px 10px;
           padding: 20px;
+          font-size: 20px;
           width: 200px;
           background-color: navy;
           border: none;
