--- a/assets/fulldoc.css
+++ b/assets/fulldoc.css
@@ -96,11 +96,16 @@ main {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
       to left,
       rgb(234, 234, 234),
       rgb(229, 234, 253)
-    );
+    ); */
+    img{
+      opacity: 0.2;
+      position: absolute;
+      z-index: -1;
+    }
     .greetContents {
       display: flex;
       justify-content: center;
@@ -117,12 +122,14 @@ main {
       .homeBtns {
         margin: 20px;
         button {
+          font-weight: bold;
+          font-size: 20px;
           border: none;
           box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.209);
           border-radius: 10px;
           background-color: skyblue;
           margin: 0px 10px;
-          width: 200px;
+          width: 300px;
           padding: 20px;
         }
       }
