--- a/assets/home.css
+++ b/assets/home.css
@@ -10,7 +10,9 @@
   border-radius: 15px;
   width: 70%;
   padding: 20px 10px;
-
+  p{
+    font-size: 16px;
+  }
   .headmodal {
     margin: auto;
     width: 90%;
@@ -45,16 +47,18 @@
       border-radius: 10px;
       padding: 10px;
       background-color: rgb(242, 245, 255);
-      width: 320px;
-      height: 500px;
+      width: 350px;
+      height: auto;
       margin: 20px;
 
       h3 {
-        width: 250px;
+        width: 320px;
+        font-size: 26px;
       }
 
       p {
-        width: 250px;
+        font-size: 20px;
+        width: 300px;
       }
 
       button {
@@ -213,7 +217,8 @@ table {
   }
   th {
     text-align: center;
-    padding: 15px;
+  background-color: whitesmoke;
+  padding: 15px;
   }
   td {
     padding: 20px;
@@ -316,6 +321,7 @@ main {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 15px;
+
     a {
       text-decoration: none;
     }
@@ -330,6 +336,9 @@ main {
       color: white;
       background-color: navy;
       box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
+      p{
+        font-size: 20px
+      }
 
       h1 {
         font-size: 70px;
@@ -360,7 +369,7 @@ main {
       }
 
       p {
-        font-size: 18px;
+        font-size: 20px;
       }
     }
   }
@@ -431,7 +440,8 @@ main {
 
     p {
       margin-top: -15px;
-      width: 500px;
+      width: 600px;
+      font-size: 20px ;
     }
   }
 }
