--- a/assets/style.css
+++ b/assets/style.css
@@ -48,6 +48,7 @@ img {
     color: white;
     margin: 0px 10px;
     width: 200px;
+    font-size: 18px;
     border: none;
     border-radius: 15px;
     transition: 0.5s ease;
@@ -84,6 +85,7 @@ img {
     color: navy;
     margin: 0px 10px;
     width: 200px;
+    font-size: 18px;
     border: none;
     border-radius: 15px;
     transition: 0.5s ease;
