--- a/assets/home.css
+++ b/assets/home.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  button{
+    font-size: 20px;
+  }
 }
 
 #registerModal {
@@ -62,7 +65,7 @@
       }
 
       button {
-        margin: 5px 10px;
+        margin: 20px 10px;
         padding: 20px;
         width: 200px;
         background-color: navy;
@@ -89,11 +92,40 @@
 #shortCate,
 #cbtModal,
 #shorterModal,
-#cbtprogramModal {
+#cbtprogramModal,
+#AllshorterModal,
+#cbtMTPprogramModal,
+#cbtMTRprogramModal{
+
   border: none;
   border-radius: 10px;
-  width: 900px;
+  width: 1000px;
   padding: 20px;
+  height: 1000px;
+  
+  form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    input{
+      font-size: 20px;
+      width: 100%;
+      height: 80px;
+      padding: 20px;
+    }
+    input[type=submit]{
+      width: 150px;
+      background-color: navy;
+      color: white;
+      font-size: 18px;
+      border: none;
+      &:hover{
+        cursor: pointer;
+        background-color: rgb(39, 39, 228);
+      }
+    }
+  }
   .tblheader {
     display: flex;
     justify-content: space-between;
@@ -102,6 +134,7 @@
       padding: 5px;
       width: 100px;
     }
+    
   }
 
   .stcards {
@@ -146,6 +179,7 @@
         gap: 10px;
         h3 {
           border-radius: 10px;
+          font-size: 26px;
           color: white;
           background-color: navy;
           padding: 15px;
@@ -169,12 +203,11 @@
       .btns {
         align-items: center;
         justify-content: center;
-        display: grid;
-        grid-template-columns: 280px 280px;
-        gap: 10px;
+        display: flex;
         h3 {
           border-radius: 10px;
-          font-size: 15px;
+          font-size: 26px;
+          width: 100%;
           color: white;
           padding: 20px;
           text-align: center;
@@ -207,7 +240,10 @@ table {
 }
 
 #shortermTbl,
-#diplomaTbl {
+#diplomaTbl,
+#allshortermTbl,
+#allcbtTbl,
+#MTNRcbtTbl {
   background-color: whitesmoke;
   tr,
   td {
